# duck-lang

./: .gitignore  Cargo.toml  LICENSE  README.md
duck/: Cargo.toml
duck-bytecode/: Cargo.toml
duck-bytecode/src/: bytecode.rs  error.rs
duck-compiler/: Cargo.toml
duck-compiler/src/: compiler.rs  errors.rs  lib.rs  locals.rs
duck-lang/: Cargo.toml
duck-lang/src/: main.rs
duck-syntax/: Cargo.toml
duck-syntax/src/: ast.rs  errors.rs  lib.rs  parser.rs  scanner.rs  token.rs
duck-vm/: Cargo.toml
duck-vm/src/: lib.rs
duck-vm/src/stdlib/: duck_std.rs  mod.rs
duck-vm/src/vm/: debug.rs  errors.rs  gc.rs  memory.rs  mod.rs  module.rs  native.rs  vm.rs
duck/src/: main.rs
duck/tests/: script.rs
