[package]
name = "duck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duck-vm = {path = "../duck-vm"}
duck-bytecode = {path = "../duck-bytecode"}
duck-compiler = {path = "../duck-compiler"}
anyhow = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
